Add ability to set component title